--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "svelte-otp",
-  "private": true,
   "version": "0.0.0",
   "description": "svelte Otp",
   "type": "module",
@@ -13,7 +12,8 @@
     "lint": "eslint './src/**/*.{js,ts,svelte}'",
     "lint:fix": "eslint --fix './src/**/*.{js,ts,svelte}'",
     "prelint": "npm run format",
-    "cz": "git-cz"
+    "cz": "git-cz",
+    "pkg:build": "svelte-package"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -44,7 +44,10 @@
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "next",
+    "@sveltejs/package": "next",
+    "vite": "^3.1.0-beta.1"
   },
   "lint-staged": {
     "*.{js,ts,svelte}": [
