--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "checkJs": true,
     "isolatedModules": true
   },
+  "exclude": ["./jest.config.ts"],
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
