--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.1",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
