--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,10 @@
 {
-    "branches": ["master", "next", "main"]
+    "branches": ["master", "next", "main"],
+    "plugins": [
+        "@semantic-release/commit-analyzer",
+        "@semantic-release/release-notes-generator",
+        ["@semantic-release/npm", {
+            "pkgRoot": "package"
+        }]
+    ]
 }
