--- a/.releaserc
+++ b/.releaserc
@@ -3,6 +3,10 @@
     "plugins": [
         ["@semantic-release/npm", {
             "pkgRoot": "package"
-        }]
+        }],
+        "@semantic-release/commit-analyzer",
+        "@semantic-release/release-notes-generator",
+        "@semantic-release/npm",
+        "@semantic-release/git"
     ]
 }
