refactor: changes in config

--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build:demo": "vite build",
+    "build:sync": "svelte-kit sync && npm run build:lib",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write ./src/**/*.{svelte,ts}",
-    "lint": "eslint './src/**/*.{js,ts,svelte}'",
-    "lint:fix": "eslint --fix './src/**/*.{js,ts,svelte}'",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "prelint": "npm run format",
     "cz": "git-cz",
     "pkg:build": "svelte-package",
