--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cssnano": "^5.1.13",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "git-cz": "^4.7.3",
     "husky": "^6.0.0",
@@ -76,7 +77,7 @@
   },
   "lint-staged": {
     "*.{js,ts,svelte}": [
-      "svelte-check",
+      "svelte-check --ignore ./package",
       "npm run lint:fix"
     ]
   },
