--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
 		"sourceMap": true,
 		"strict": true
 	},
-	"exclude": ["./jest.config.ts","package/*"],
+	"exclude": ["dist","./jest.config.ts","package"],
 	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
 	// "references": [{ "path": "./tsconfig.node.json" }]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
