--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "postcss-nested": "^5.0.6",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "semantic-release": "17.2.1",
+    "semantic-release": "^17.4.7",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-jester": "^2.3.2",
