--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "svelte Otp",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build:demo": "vite build",
+    "dev": "VITE_APP_VERSION__=process.env.npm_package_version && vite",
+    "build:demo": "VITE_APP_VERSION__=process.env.npm_package_version && vite build",
     "build:sync": "svelte-kit sync && npm run build:lib",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
