--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,3 @@
-// {
-//   "extends": "./.svelte-kit/tsconfig.json",
-//   "compilerOptions": {
-//     "target": "ESNext",
-//     "useDefineForClassFields": true,
-//     "module": "ESNext",
-//     "resolveJsonModule": true,
-//     "baseUrl": ".",
-//     /**
-//      * Typecheck JS in `.svelte` and `.js` files by default.
-//      * Disable checkJs if you'd like to use dynamic types in JS.
-//      * Note that setting allowJs false does not prevent the use
-//      * of JS in `.svelte` files.
-//      */
-//     "allowJs": true,
-//     "checkJs": true,
-//     "isolatedModules": true
-//   },
-//   "exclude": ["./jest.config.ts"],
-//   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
-//   "references": [{ "path": "./tsconfig.node.json" }]
-// }
-
-
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
@@ -39,7 +15,7 @@
 		"strict": true
 	},
 	"exclude": ["dist","./jest.config.ts","package"],
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+	"include": ["*.ts","src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
 	// "references": [{ "path": "./tsconfig.node.json" }]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
